--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
       }
     }
   },
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc && vite build",
     "format": "biome format . --write",
