--- a/biome.json
+++ b/biome.json
@@ -6,10 +6,10 @@
     "files": {
         "include": [
             "biome.json",
-            "cdk.json",
             "release.config.cjs",
             "commitlint.config.cjs",
-            "src/**/*"
+            "src/**/*",
+            "test/**/*"
         ]
     },
     "linter": {
@@ -17,8 +17,34 @@
         "rules": {
             "recommended": true,
             "nursery": {
+                "noEmptyTypeParameters": "error",
+                "noInvalidUseBeforeDeclaration": "error",
+                "noUnusedImports": "error",
+                "noUnusedPrivateClassMembers": "error",
+                "noUselessLoneBlockStatements": "error",
+                "noUselessTernary": "error",
+                "useExportType": "error",
                 "useImportType": "error",
-                "noUnusedImports": "error"
+                "useForOf": "error",
+                "useGroupedTypeImport": "error"
+            },
+            "complexity": {
+                "noExcessiveCognitiveComplexity": "warn",
+                "useSimplifiedLogicExpression": "error"
+            },
+            "correctness": {
+                "noNewSymbol": "error"
+            },
+            "style": {
+                "useBlockStatements": "error",
+                "useCollapsedElseIf": "error",
+                "useShorthandArrayType": "error",
+                "useShorthandAssign": "error",
+                "useSingleCaseStatement": "error"
+            },
+            "suspicious": {
+                "noApproximativeNumericConstant": "warn",
+                "noConsoleLog": "error"
             }
         }
     },
