--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
     },
     "include": [
         "src/**/*"
+    ],
+    "references": [
+        { "path": "./tsconfig.node.json" },
+        { "path": "./tsconfig.vitest.json" },
     ]
 }
