--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,9 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v4
+        env:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: DASPRiD/jsonapi-zod-query
 
       - name: Build
         run: pnpm build
