--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -38,6 +38,5 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v4
-        env:
+        with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: DASPRiD/jsonapi-zod-query
