--- a/lefthook.yml
+++ b/lefthook.yml
@@ -5,6 +5,6 @@ pre-commit:
       run: npx biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true {staged_files} && git update-index --again
 
 commit-msg:
-  scripts:
-    "commitlint.sh":
-      runner: bash
+  commands:
+    lint-commit-msg:
+      run: pnpm exec commitlint --edit
