--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "format": "biome format . --write",
-    "check": "biome check . --apply"
+    "check": "biome check . --write"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.3",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
+    "@biomejs/biome": "1.9.3",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@tsconfig/vite-react": "^3.0.2",
-    "@vitest/coverage-v8": "^1.6.0",
-    "lefthook": "^1.6.11",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1",
-    "vitest": "^1.6.0",
+    "@vitest/coverage-v8": "^2.1.3",
+    "lefthook": "^1.7.21",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vite-plugin-dts": "^4.2.4",
+    "vitest": "^2.1.3",
     "zod": "^3.23.8"
   },
   "peerDependencies": {
